--- a/package.json
+++ b/package.json
@@ -8,7 +8,27 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "@react-hook/window-scroll": "^1.0.7",
+    "apollo-boost": "^0.4.4",
+    "core-js": "^3.6.5",
+    "graphql": "^14.5.8",
+    "prop-types": "^15.7.2",
+    "react-adsense": "^0.1.0",
+    "react-apollo-hooks": "^0.5.0",
+    "react-app-polyfill": "^1.0.6",
+    "react-autosuggest": "^9.4.3",
+    "react-bootstrap": "^1.0.0",
+    "react-bootstrap-button-loader": "^2.0.0",
+    "react-id-swiper": "^3.0.0",
+    "react-loadingg": "^1.7.2",
+    "react-router-dom": "^5.1.2",
+    "react-toastify": "^5.4.1",
+    "react-use-gesture": "^7.0.15",
+    "regenerator-runtime": "^0.13.5",
+    "styled-components": "^4.4.1",
+    "styled-reset": "^4.0.7",
+    "swiper": "^5.3.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,7 +48,8 @@
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "last 1 ie version"
     ]
   }
 }
