--- a/package.json
+++ b/package.json
@@ -3,26 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-hook/window-scroll": "^1.0.7",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "@react-hook/window-scroll": "^1.0.7",
     "apollo-boost": "^0.4.4",
     "core-js": "^3.6.5",
     "graphql": "^14.5.8",
     "prop-types": "^15.7.2",
+    "react": "^16.13.1",
     "react-adsense": "^0.1.0",
     "react-apollo-hooks": "^0.5.0",
     "react-app-polyfill": "^1.0.6",
     "react-autosuggest": "^10.0.2",
     "react-bootstrap": "^1.0.0",
     "react-bootstrap-button-loader": "^2.0.0",
+    "react-cookie": "^4.0.3",
+    "react-dom": "^16.13.1",
     "react-id-swiper": "^3.0.0",
     "react-loadingg": "^1.7.2",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
     "react-toastify": "^5.4.1",
     "react-use-gesture": "^7.0.15",
     "regenerator-runtime": "^0.13.5",
