--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.4",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
     "graphql": "^14.5.8",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
