--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.13.1",
     "react-id-swiper": "^3.0.0",
     "react-loadingg": "^1.7.2",
+    "react-minimal-pie-chart": "^8.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-toastify": "^5.4.1",
